tests/baselines/reference/indexIntoArraySubclass.errors.txt
==== tests/cases/compiler/indexIntoArraySubclass.ts (1 errors) ====
    interface Foo2<T> extends Array<T> { }
    var x2: Foo2<string>;
    var r = x2[0]; // string
    r = 0; //error
    ~
!!! indexIntoArraySubclass.ts(4,1): error TS2011: Cannot convert 'number' to 'string'.